fixed and added stuff

--- a/index.html
+++ b/index.html
@@ -122,6 +122,55 @@
         </div>
     </section>
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>BAĞU OCAKBAŞI</h3>
+                    <p>Geleneksel lezzetler, modern sunum. Her lokmada kalite ve lezzet garantisi.</p>
+                    <div class="social-links">
+                        <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/baguocakbasi/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+                <div class="footer-section">
+                    <h4>Hızlı Linkler</h4>
+                    <ul>
+                        <li><a href="#home">Ana Sayfa</a></li>
+                        <li><a href="#menu">Menü</a></li>
+                        <li><a href="#about">Hakkımızda</a></li>
+                        <li><a href="#contact">İletişim</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>İletişim Bilgileri</h4>
+                    <div class="footer-contact">
+                        <p><i class="fas fa-map-marker-alt"></i> Merkez Mah. Atatürk Cad. No:123</p>
+                        <p><i class="fas fa-phone"></i> +90 212 123 45 67</p>
+                        <p><i class="fas fa-envelope"></i> info@baguocakbasi.com</p>
+                    </div>
+                </div>
+                <div class="footer-section">
+                    <h4>Çalışma Saatleri</h4>
+                    <div class="working-hours">
+                        <p><strong>Pazartesi - Pazar</strong></p>
+                        <p>10:00 - 23:00</p>
+                        <div class="order-footer">
+                            <a href="https://wa.me/905551234567?text=Merhaba, sipariş vermek istiyorum" class="footer-whatsapp" target="_blank">
+                                <i class="fab fa-whatsapp"></i> Sipariş Ver
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 BAĞU OCAKBAŞI. Tüm hakları saklıdır.</p>
+            </div>
+        </div>
+    </footer>
+
     <!-- Sticky WhatsApp Button -->
     <div class="whatsapp-sticky">
         <a href="https://wa.me/905551234567?text=Merhaba, sipariş vermek istiyorum" target="_blank">
