--- a/index.html
+++ b/index.html
@@ -93,22 +93,22 @@
             <h2>Menümüz</h2>
             <div class="menu-grid">
                 <div class="menu-item">
-                    <img src="images/kebab.jpg" alt="Kebab" onerror="this.src='https://via.placeholder.com/300x200?text=Kebab'">
+                    <img src="https://images.unsplash.com/photo-1529692236671-f1f6cf9683ba?w=300&h=200&fit=crop" alt="Adana Kebab" onerror="this.src='https://via.placeholder.com/300x200/8B4513/FFFFFF?text=Adana+Kebab'">
                     <h3>Adana Kebab</h3>
                     <p>Özel baharatlarla hazırlanmış nefis Adana kebab</p>
                 </div>
                 <div class="menu-item">
-                    <img src="images/lahmacun.jpg" alt="Lahmacun" onerror="this.src='https://via.placeholder.com/300x200?text=Lahmacun'">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Lahmacun.jpg/960px-Lahmacun.jpg?w=300&h=200&fit=crop" alt="Lahmacun" onerror="this.src='https://via.placeholder.com/300x200/8B4513/FFFFFF?text=Lahmacun'">
                     <h3>Lahmacun</h3>
                     <p>İnce hamur üzerine özel karışımla hazırlanmış</p>
                 </div>
                 <div class="menu-item">
-                    <img src="images/pide.jpg" alt="Pide" onerror="this.src='https://via.placeholder.com/300x200?text=Pide'">
+                    <img src="https://images.unsplash.com/photo-1513104890138-7c749659a591?w=300&h=200&fit=crop" alt="Pide" onerror="this.src='https://via.placeholder.com/300x200/8B4513/FFFFFF?text=Pide'">
                     <h3>Karışık Pide</h3>
                     <p>Taze malzemelerle hazırlanmış özel pidelerimiz</p>
                 </div>
                 <div class="menu-item">
-                    <img src="images/salad.jpg" alt="Salata" onerror="this.src='https://via.placeholder.com/300x200?text=Salata'">
+                    <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?w=300&h=200&fit=crop" alt="Çoban Salata" onerror="this.src='https://via.placeholder.com/300x200/8B4513/FFFFFF?text=Coban+Salata'">
                     <h3>Çoban Salata</h3>
                     <p>Taze sebzelerden hazırlanmış vitamin deposu</p>
                 </div>
@@ -157,9 +157,9 @@
                     <h3>BAĞU OCAKBAŞI</h3>
                     <p>Geleneksel lezzetler, modern sunum. Her lokmada kalite ve lezzet garantisi.</p>
                     <div class="social-links">
-                        <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                        <a href="javascript:void(0);" target="_blank"><i class="fab fa-facebook"></i></a>
                         <a href="https://www.instagram.com/baguocakbasi/" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="javascript:void(0);" target="_blank"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
                 <div class="footer-section">
