--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h2>Menümüz</h2>
             <div class="menu-grid">
                 <div class="menu-item">
-                    <img src="https://images.unsplash.com/photo-1529692236671-f1f6cf9683ba?w=300&h=200&fit=crop" alt="Adana Kebab" onerror="this.src='https://via.placeholder.com/300x200/8B4513/FFFFFF?text=Adana+Kebab'">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Adana_kebab.jpg/250px-Adana_kebab.jpg?w=300&h=200&fit=crop" alt="Adana Kebab" onerror="this.src='https://via.placeholder.com/300x200/8B4513/FFFFFF?text=Adana+Kebab'">
                     <h3>Adana Kebab</h3>
                     <p>Özel baharatlarla hazırlanmış nefis Adana kebab</p>
                 </div>
@@ -103,12 +103,12 @@
                     <p>İnce hamur üzerine özel karışımla hazırlanmış</p>
                 </div>
                 <div class="menu-item">
-                    <img src="https://images.unsplash.com/photo-1513104890138-7c749659a591?w=300&h=200&fit=crop" alt="Pide" onerror="this.src='https://via.placeholder.com/300x200/8B4513/FFFFFF?text=Pide'">
+                    <img src="https://www.sbarro.com.tr/cmsfiles/products/turka-karisik-pide.png?w=300&h=200&fit=crop" alt="Pide" onerror="this.src='https://via.placeholder.com/300x200/8B4513/FFFFFF?text=Pide'">
                     <h3>Karışık Pide</h3>
                     <p>Taze malzemelerle hazırlanmış özel pidelerimiz</p>
                 </div>
                 <div class="menu-item">
-                    <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?w=300&h=200&fit=crop" alt="Çoban Salata" onerror="this.src='https://via.placeholder.com/300x200/8B4513/FFFFFF?text=Coban+Salata'">
+                    <img src="https://storage.kolaysiparis.com.tr/ks-prod/images/shop/66bda072bc877/product/66c77817d765e/EvqYGy3YNP4LyoyDUhKm9rsWmYC7sTNchUfG6yNU.jpg?w=300&h=200&fit=crop" alt="Çoban Salata" onerror="this.src='https://via.placeholder.com/300x200/8B4513/FFFFFF?text=Coban+Salata'">
                     <h3>Çoban Salata</h3>
                     <p>Taze sebzelerden hazırlanmış vitamin deposu</p>
                 </div>
