updated the num

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <h3>Telefon</h3>
-                        <p>+90 212 123 45 67</p>
+                        <p>0464 333 02 22</p>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-clock"></i>
@@ -140,7 +140,7 @@
                 <div class="order-section">
                     <h3>Sipariş Vermek İçin</h3>
                     <p>WhatsApp üzerinden kolayca sipariş verebilirsiniz</p>
-                    <a href="https://wa.me/905551234567?text=Merhaba, sipariş vermek istiyorum" class="whatsapp-button" target="_blank">
+                    <a href="https://wa.me/904643330222?text=Merhaba, sipariş vermek istiyorum" class="whatsapp-button" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                         WhatsApp'tan Sipariş Ver
                     </a>
@@ -175,7 +175,7 @@
                     <h4>İletişim Bilgileri</h4>
                     <div class="footer-contact">
                         <p><i class="fas fa-map-marker-alt"></i> Merkez Mah. Atatürk Cad. No:123</p>
-                        <p><i class="fas fa-phone"></i> +90 212 123 45 67</p>
+                        <p><i class="fas fa-phone"></i> 0464 333 02 22</p>
                         <p><i class="fas fa-envelope"></i> info@baguocakbasi.com</p>
                     </div>
                 </div>
@@ -185,7 +185,7 @@
                         <p><strong>Pazartesi - Pazar</strong></p>
                         <p>10:00 - 23:00</p>
                         <div class="order-footer">
-                            <a href="https://wa.me/905551234567?text=Merhaba, sipariş vermek istiyorum" class="footer-whatsapp" target="_blank">
+                            <a href="https://wa.me/904643330222?text=Merhaba, sipariş vermek istiyorum" class="footer-whatsapp" target="_blank">
                                 <i class="fab fa-whatsapp"></i> Sipariş Ver
                             </a>
                         </div>
@@ -200,7 +200,7 @@
 
     <!-- Sticky WhatsApp Button -->
     <div class="whatsapp-sticky">
-        <a href="https://wa.me/905551234567?text=Merhaba, sipariş vermek istiyorum" target="_blank">
+        <a href="https://wa.me/904643330222?text=Merhaba, sipariş vermek istiyorum" target="_blank">
             <i class="fab fa-whatsapp"></i>
         </a>
     </div>
